syntax = "proto3";
package botrpc;

service BotService {
    rpc ReloadVm(GuildScriptSpecifier) returns (Empty);
    rpc StreamVmLogs(GuildScriptSpecifier) returns (stream ScriptLogItem);
} 

message Empty{}

message VmSpecifier{
    oneof specifier {
        Empty guild = 1;
        uint64 pack = 2;
    }
}

message GuildScriptSpecifier{
    fixed64 guild_id = 1;
    VmSpecifier script = 2;
}

message ScriptLogItem{
    string filename = 1;
    int32 linenumber = 2;
    int32 column = 3;
    string message = 4;
    string kind = 5;
}